syntax = "proto3";

package billing.middleware.user.subscription.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/billing/middleware/v1/user/subscription";

import "basetypes/v1/conds.proto";
import "basetypes/billing/v1/enums.proto";

message SubscriptionReq {
    optional uint32 ID = 10;
    optional string EntID = 20;
    optional string AppID = 30;
    optional string UserID = 40;
    optional string PackageID = 50;
    optional uint32 StartAt = 60;
    optional uint32 EndAt = 70;
    optional basetypes.billing.v1.UsageState UsageState = 90;
    optional uint32 SubscriptionCredit = 100;
    optional uint32 AddonCredit = 110;
}

message Subscription {
    // @inject_tag: sql:"id"
    uint32 ID = 10;
    // @inject_tag: sql:"ent_id"
    string EntID = 20;
    // @inject_tag: sql:"app_id"
    string AppID = 30;
    // @inject_tag: sql:"user_id"
    string UserID = 40;
    // @inject_tag: sql:"package_id"
    string PackageID = 50;
    // @inject_tag: sql:"start_at"
    uint32 StartAt = 60;
    // @inject_tag: sql:"end_at"
    uint32 EndAt = 70;
    // @inject_tag: sql:"usage_state"
    string UsageStateStr = 90;
    basetypes.billing.v1.UsageState UsageState = 91;
    // @inject_tag: sql:"subscription_credit"
    uint32 SubscriptionCredit = 100;
    // @inject_tag: sql:"addon_credit"
    uint32 AddonCredit = 110;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 1000;
    // @inject_tag: sql:"updated_at"
    uint32 UpdatedAt = 1010;
}

message Conds {
    optional basetypes.v1.Uint32Val ID = 9;
    optional basetypes.v1.StringVal EntID = 10;
    optional basetypes.v1.StringVal AppID = 20;
    optional basetypes.v1.StringVal UserID = 30;
    optional basetypes.v1.StringVal PackageID = 40;
    optional basetypes.v1.Uint32Val StartAt = 60;
    optional basetypes.v1.Uint32Val EndAt = 70;
    optional basetypes.v1.Uint32Val UsageState = 80;
    optional basetypes.v1.Uint32SliceVal IDs = 1000;
    optional basetypes.v1.StringSliceVal EntIDs = 1010;
}

